Fixed z-indexing (#29)

--- a/LitExplore/Client/Pages/Graph.razor.css
+++ b/LitExplore/Client/Pages/Graph.razor.css
@@ -51,6 +51,12 @@
     left: 85vw;
     top: 51vh;
 }
+.paperbutton:hover {
+    z-index: 10;
+}
+.connectionbutton:hover {
+    z-index: 10;
+}
 
 .teams {
     position: fixed;
