--- a/LitExplore/Client/Papers/PaperNode.razor.css
+++ b/LitExplore/Client/Papers/PaperNode.razor.css
@@ -5,6 +5,4 @@
     border-radius: 4pt;
 }
 
-.paper .window {
-    z-index: 10;
-}
+
